--- a/cdn/index.html
+++ b/cdn/index.html
@@ -24,10 +24,8 @@
         <div id="time" style="margin-top: 20px; font-size: 16px;"></div>
         <a class="a" href=""><i>Try again</i></a>
     </div>
-    <img src="https://cdn.example.com/images/large-image.jpg" alt="Large Image">
-    <video controls>
-        <source src="https://cdn.example.com/videos/large-video.mp4" type="video/mp4">
-    </video>
+    <img src="https://cdn.jsdelivr.net/gh/milaa-wee/my-website@main/What-is-CDN.jpg" alt="Large Image">
+    
     <hr>
     <a style="margin-left: 110px;" href="index3.html">Kembali</a>
 </body>
